--- a/frontend/index.html
+++ b/frontend/index.html
@@ -347,19 +347,13 @@
     <!-- Footer -->
     <footer class="bg-white py-4 mt-5 shadow-sm border-top">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+            <div class="row">
+                <div class="col-12 text-center">
                     <p class="mb-0 text-muted">
                         <i class="bi bi-shield-check text-success me-2"></i>
                         © 2026 Collecte Communautaire - Paiements sécurisés via 
                         <strong class="text-primary">Wave</strong>
                     </p>
-                </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <a href="admin/index.html" class="text-decoration-none text-muted small">
-                        <i class="bi bi-gear-fill me-1"></i>
-                        Administration
-                    </a>
                 </div>
             </div>
         </div>
