--- a/frontend/index.html
+++ b/frontend/index.html
@@ -192,39 +192,25 @@
                                     </div>
                                 </div>
 
-                                <!-- Montant -->
+                                <!-- Montant Fixe Information -->
                                 <div class="mb-4 pb-4 border-bottom">
                                     <h5 class="text-primary mb-4 d-flex align-items-center">
                                         <div class="bg-primary bg-opacity-10 rounded-circle p-2 me-3">
                                             <i class="bi bi-currency-exchange text-primary fs-4"></i>
                                         </div>
-                                        <span>Montant</span>
+                                        <span>Montant de l'inscription</span>
                                     </h5>
                                     
-                                    <div class="row g-3">
-                                        <div class="col-12">
-                                            <label for="montant" class="form-label">
-                                                Montant (FCFA) <span class="text-danger">*</span>
-                                            </label>
-                                            <input 
-                                                type="number" 
-                                                class="form-control form-control-lg" 
-                                                id="montant" 
-                                                name="montant"
-                                                placeholder="Entrez le montant"
-                                                required
-                                                min="100"
-                                                step="100">
-                                            
+                                    <div class="text-center p-4 bg-light rounded-3 border border-2 border-primary">
+                                        <div class="text-muted mb-2 text-uppercase small fw-semibold" style="letter-spacing: 1px;">
+                                            Montant fixe
                                         </div>
-
-                                        <!-- Montants suggérés -->
-                                        <div class="col-12">
-                                            <label class="form-label">Montants suggérés :</label>
-                                            <div id="montants-suggeres" class="d-flex flex-wrap gap-2">
-                                                <!-- Généré par JavaScript -->
-                                            </div>
-                                        </div>
+                                        <h2 class="text-primary fw-bold mb-0">
+                                            6 000 <small class="fs-4">FCFA</small>
+                                        </h2>
+                                        <p class="text-muted mt-2 mb-0 small">
+                                            <i class="bi bi-info-circle"></i> Ce montant est fixe pour tous les participants
+                                        </p>
                                     </div>
                                 </div>
 
