--- a/frontend/index.html
+++ b/frontend/index.html
@@ -275,7 +275,7 @@
 
                             <!-- Logo Wave cliquable avec effet moderne -->
                             <div class="mb-5 text-center">
-                                <a href="https://pay.wave.com/m/M_ci_ni2XKML6kc_S/c/ci/6060" 
+                                <a href="https://pay.wave.com/m/M_ci_ni2XKML6kc_S/c/ci/?amount=6060" 
                                    id="wave-payment-link" 
                                    class="wave-logo-link d-inline-block position-relative"
                                    target="_blank"
