--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Inscription et paiement - Pélérinage">
-    <title>Inscription - Pélérinage</title>
+    <meta name="description" content="Inscription et paiement - Pélerinage Jeunes 2026">
+    <title>Inscription - Pélerinage Jeunes 2026</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,7 +27,7 @@
                     <i class="bi bi-cash-coin fs-4"></i>
                 </div>
                 <div>
-                    <div class="text-primary fs-5 fw-bold">Pélérinage</div>
+                    <div class="text-primary fs-5 fw-bold">Pélerinage Jeunes 2026</div>
                     <div class="text-muted" style="font-size: 0.75rem; letter-spacing: 0.5px;">INSCRIPTION EN LIGNE</div>
                 </div>
             </a>
