--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,14 +20,14 @@
 </head>
 <body>
     <!-- Navbar Moderne -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-warning shadow-sm sticky-top">
         <div class="container">
             <a class="navbar-brand fw-bold d-flex align-items-center" href="index.html">
                 <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width: 50px; height: 50px;">
                     <i class="bi bi-cash-coin fs-4"></i>
                 </div>
                 <div>
-                    <div class="text-primary fs-5 fw-bold">Pélerinage Jeunes 2026</div>
+                    <div class="text-primary fs-5 fw-bold">Pélerinage Jeunes 2026 St Paul des Lauriers</div>
                     <div class="text-muted" style="font-size: 0.75rem; letter-spacing: 0.5px;">INSCRIPTION EN LIGNE</div>
                 </div>
             </a>
